# Fract_ol

./: .clang-format  CMakeLists.txt  Makefile  README.md  fractol
.cache/clangd/index/: fractal.hpp.D7C947545F601BB5.idx  main.c.2AD8B6BE03F87C2C.idx  main.cpp.311FC63C712EA7C1.idx  main.cpp.94130A4943F90222.idx  window.cpp.C5EE56B261E13BD6.idx
include/: VulkanClass.hpp  WindowClass.hpp  fract_ol.h  fractal.hpp
includes/: fract_ol.h
source/: fractal.cpp  main.c  test.c
source/legacyCode/: Vulkan.c  legacyHeader.h  main.c
src/: fractal.hpp  main.cpp  main2.cpp  opencl.cpp  opencl.hpp  window.cpp
src/kernels/: vectors_addition.cl
